styles.css
:root {
  --color-font: #000000;
  --color-background: #f2f3f4;
  --color-yellow: #ffea00;
  --color-blue: #002d72;
  --color-blue-90: #dbe6f0;
  --color-blue-60: #b2c3d2;
  --color-white: #ffffff;
  --font-size-sm: 1.5rem;
  --border-radius: 8px;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background-color: var(--color-background);
}

body {
  font-family: "Atkinson Hyperlegible", sans-serif;
  color: var(--color-font);
  line-height: 1.5;
  padding: 1.5rem;
}

h1 {
  font-size: 2.5rem;
  margin-top: 2rem;
  margin-bottom: 1rem;
  line-height: 1.2;
}

h2 {
  font-size: 2rem;
  margin-top: 1.75rem;
  margin-bottom: 0.75rem;
  line-height: 1.3;
}

h3 {
  font-size: 1.5rem;
  margin-top: 1.2rem;
  margin-bottom: 0.5rem;
}

p,
ul,
ol {
  font-size: var(--font-size-sm);
  margin-top: 0;
  margin-bottom: 1.25rem;
  max-width: 70ch;
}

li {
  max-width: 70ch;
  line-height: 1.5;
}

.container {
  width: 100%;
  max-width: 80ch;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.back-link {
  display: inline-block;
  color: var(--color-blue);
  font-size: 1.5rem;
  font-weight: 600;
  text-decoration: underline;
  text-underline-offset: 0.3rem;
  padding: 1rem 0;
}

.lesson-intro p {
  margin-bottom: 0;
}

.lesson-outro p {
  margin-bottom: 0;
}

.task-section {
  border: 2px solid var(--color-blue-60);
  padding: 2rem;
  border-radius: 8px;
}

.task-section > h2:first-child {
  margin-top: 0;
}

.task-section > :is(p, ol, ul):last-child {
  margin-bottom: 0;
}

ul,
ol {
  padding-left: 1.5rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.inner-section {
  background: #f9f9f9;
  padding: 1.5rem;
  border: 1px dashed #686868;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.inner-section p {
  margin-bottom: 0;
}

.inner-section .button-link {
  margin: 0;
}

.scroll-gap {
  margin-bottom: 80vh;
}

.responsive-img {
  width: 100%;
  height: 200px;
  object-fit: cover;
  object-position: center;
  border-radius: 8px;
  display: block;
}

.button-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 15px;
  margin-top: 15px;
}

.button-link {
  text-decoration: none;
  font-size: 1.5rem;
  padding: 1.5rem 1.5rem;
  min-height: 2.75rem;
  width: 100%;
  margin: 1.5rem 0;
  background-color: var(--color-blue);
  color: var(--color-white);
  border-radius: var(--border-radius);
  border: 2px solid transparent;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  outline: 3px solid transparent;
  transition: background-color 0.3s ease;
}

.button-link:hover,
.button-link:focus {
  background-color: var(--color-blue-90);
  color: var(--color-blue);
  outline: 2px solid var(--color-blue);
}

